feat(assiduidade)!: separa o resumo do mes do pedido de justificacao
O GET do mes reutilizava o DTO de um pedido como raiz, o que nao e: a
resposta trazia um cabecalho de formulario todo a null (pedidoId, motivo,
tipoJustificacao, deduzirFaltaEm, valores, parecer, documentos) que nao
pertence a leitura de um periodo.

Passa a ter DTO proprio, ResumoFaltaMesDTO: colaborador, ano/mes,
itensFalta e pedidos. Os dias JA justificados deixam de vir soltos --
vao agrupados no pedido a que pertencem, cada grupo com o cabecalho
completo do formulario, para o Editar abrir sem segunda chamada. Em
itensFalta ficam so os dias sem justificacao, prontos a seleccionar.

Cada grupo tem exactamente a forma do GET .../pedido/{pedidoUuid}: e o
mesmo montarGrupo que serve os dois endpoints, por isso nao podem
divergir. Um pedido que atravesse dois meses aparece repartido; para o
pedido completo ha o GET por pedido.

Motivo e "Com justificativo?" passam a ser lidos do cabecalho, nao por
item: sao a caixa e o radio unicos do bloco "Justificar Faltas
Selecionadas", aplicados a todas as faltas seleccionadas ("a justificativa
sera aplicada as N faltas selecionadas"). Antes o frontend tinha de
repetir o mesmo valor em cada linha e um falhanco deixava o mesmo pedido
com motivos diferentes. Nos itens continuam, so de resposta.

BREAKING: despachoRh sai tambem do JustificarFaltaDTO -- o campo nao
existe no ecra 3.2.3 e a coluna RH_T_FALTA.DESPACHO_RH e VARCHAR2(3),
onde os valores do dominio (JUSTIFICADA/INJUSTIFICADA) nao cabem.
JustificarFaltaDTO deixa de ser o tipo de resposta do GET por mes
(handler, controller e @Schema actualizados).

Verificado live no colaborador 958937: 2 dias soltos + 1 grupo com os
seus 2 dias, e o grupo identico a resposta do GET por pedido.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>